# asipio

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml
aiovoip/: application.py  dialog.py  peers.py  protocol.py
asipio/: application.py
docs/: conf.py
examples/: README.md
examples/back_to_back/: client.py  registrar.py  server.py
examples/call/: README.md  client.py  details.md  diagram.md  server.py
examples/sipp/: README.md
examples/subscribe/: client.py  server.py
tests/: conftest.py
